--- a/InstaCloneFirebase/Podfile
+++ b/InstaCloneFirebase/Podfile
@@ -4,6 +4,7 @@
 target 'InstaCloneFirebase' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  pod 'Firebase'
   pod 'FirebaseAnalytics'
   pod 'FirebaseAuth'
   pod 'FirebaseFirestore'
